bk_ida/gccida/g0/assemble_end_function
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assemble_end_function/src/varasm.c:1724:43: error: use of undeclared identifier 'off_818574'
sprintf( label, "*.%s%u", ( const char *)&off_818574, ( unsigned int)++labelno_17); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assemble_end_function/src/varasm.c:1724:72: error: use of undeclared identifier 'labelno_17'
sprintf( label, "*.%s%u", ( const char *)&off_818574, ( unsigned int)++labelno_17); 
                                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assemble_end_function/src/varasm.c:1725:52: error: use of undeclared identifier 'off_818574'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&off_818574, ( unsigned int)labelno_17); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assemble_end_function/src/varasm.c:1725:79: error: use of undeclared identifier 'labelno_17'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&off_818574, ( unsigned int)labelno_17); 
                                                                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assemble_end_function/src/obj/varasm.o] Error 1
